--- a/src/styles/bg4.css
+++ b/src/styles/bg4.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: url('/src/public/4.png') no-repeat center center fixed, rgba(0, 0, 0, 0.7);
+  background: url('/src/public/4.jpg') no-repeat center center fixed, rgba(0, 0, 0, 0.7);
   background-blend-mode: multiply;
   background-size: cover;
 }
