--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,3 +1,24 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 110vh;
+}
+
+.content-wrap {
+  flex: 1;
+}
+
+footer {
+  background-color: black;
+  color: white;
+  padding: 1rem;
+}
+
 body {
   color: white;
   background-color: transparent;
